# AOC2024

./: .gitignore  README.md  meson.build
day01/: part1.c  part2.c
day02/: part1.c  part2.c
day03/: part1.c  part2.c
day04/: part1.c  part2.c
day05/: part1.c  part2.c
day06/: part1.c  part2.c
day07/: part1.c  part2.c
day08/: part1.c  part2.c
day09/: part1.c  part2.c
day10/: part1.c  part2.c
day11/: part1.c  part2.c
day12/: part1.c  part2.c
day13/: part1.c  part2.c
day14/: part1.c  part2.c
day15/: part1.c  part2.c
day18/: part1.c  part2.c
day19/: part1.c  part2.c
day20/: part1.c  part2.c
utils/: read_line.h  vector.h
